--- a/flipkart/search/templates/snippets/search-form.html
+++ b/flipkart/search/templates/snippets/search-form.html
@@ -1,7 +1,8 @@
-<form method='GET' action='{% url "search:query" %}' class="form my-4 my-lg-2">
-	<input class="form-control" type="text" placeholder="Search" name="q" aria-label="Search" value='{{ request.GET.q }}'></div>
-	<span class='input-group-btn'>
-		<button class="btn btn-outline-success" type="submit">Search</button>
-	</span>
-</div>
+<form method='GET' action='{% url "search:query" %}' class="form my-2 my-lg-0 search-form">
+  <div class='input-group'>
+    <input class="form-control" type="text" placeholder="Search" name='q' aria-label="Search" value='{{ request.GET.q }}'>
+    <span class='input-group-btn'>
+        <button class="btn btn-outline-success" type="submit">Search</button>
+    </span>
+    </div>
 </form>
