--- a/flipkart/templates/base.html
+++ b/flipkart/templates/base.html
@@ -5,92 +5,17 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Flipkart</title>
+      <title>Base Template</title>
         {% include 'base/css.html' %}
         {% block base_head %}{% endblock %}
     </head>
     <body>
-      {% include 'base/navbar.html' with brand_name='Flipkart' %}
+      {% include 'base/navbar.html' with brand_name='eCommerce' %}
       <div class='container'>
       {% block content %}{% endblock %}
     </div>
 
         {% include 'base/js.html' %}
-        <script type="text/javascript">
-          $(document).ready(function(){
-          	var searchForm = $(".search-form")
-          	var searchInput = searchForm.find("[name='q']")
-          	var typingTimer;
-          	var typingInterval = 500;
 
-          	searchInput.keyup(function(event){
-          		clearTimeout(typingTimer)
-          		typingTimer = setTimeout(performSearch,typingInterval)
-          		})
-
-          	searchInput.keydown(function(event){
-          		clearTimeout(typingTimer)
-          		typingTimer = setTimeout(performSearch,typingInterval)
-          	})
-          	function performSearch(){
-          		var query = searchInput.val()
-          		window.location.href = '/search/q='+query	
-          	}
-
-
-            var productForm = $(".form-product-ajax")
-            productForm.submit(function(event){
-              event.preventDefault();
-              var thisForm = $(this)
-              var actionEndPoint = thisForm.attr("data-endpoint");
-              var httpMethod = thisForm.attr("method");
-              var formData = thisForm.serialize();
-
-              $.ajax({
-              	url: actionEndPoint,
-              	method: httpMethod,
-              	data : formData,
-              	success: function(data){
-              		var submitSpan = thisForm.find(".submit-span")
-              		if(data.added){
-              			submitSpan.html("In cart <button type='submit' class='btn btn-link'>Remove?</button>")
-              		}
-              		else
-              		{
-              			submitSpan.html("<button type='submit' class='btn btn-success'>Add to Cart</button>")
-              		}
-              		var navbarCount = $(".navbar-cart-count")
-              		navbarCount.text(data.cartItemCount)
-              		var currentPath = window.location.href
-              		if(currentPath.indexOf("cart")!=-1){
-              			updateCart()
-              		}
-              	},
-              	error: function(errorData){
-              		console.log("Error")
-              		console.log(errorData)
-              	}
-              })
-            })
-            function refreshCart(){
-            	console.log("In Current Cart")
-            	var carTable = $(".cart-table")
-            	var cartBody = cartTable.find(".cart-body")
-            	cartBody.html("<h1>Changed</h1>")
-            	currentUrl = window.location.href
-
-            	var productRows = cartBody.find(".cart-product")
-            	
-            	var refreshCartUrl = 'api/cart/';
-            	var refreshCartMethod = "GET";
-            	var data = {};
-            	$.ajax({
-            		url : refreshCartUrl,
-            		method : refreshCartMethod,
-            		data : data,
-            		success : function()
-            		}),
-            	}	
-        </script>
     </body>
   </html>
